# goofing-around-in-cpp

./: .gitignore  README.md
jsoncpp/: CMakeLists.txt  io.hpp  main.test.cpp  test.json
jsoncpp/read_from/: read_from_stream.cpp  read_from_stream.hpp  read_from_string.cpp  read_from_string.hpp
jsoncpp/write_into/: write_into_stream.cpp  write_into_stream.hpp  write_into_string.cpp  write_into_string.hpp
libwebsockets/: CMakeLists.txt  ChatService.cpp  ChatService.hpp  LwsHttpServer.class.cpp  LwsHttpServer.class.hpp  Protocol.cpp  Protocol.hpp  Readme.md  Runnable.hpp  WebSocket.cpp  WebSocket.hpp  WebSockets.cpp  WebSockets.hpp  callbacks.cpp  callbacks.h  client.cpp  main.cpp  page.html  wtf.cpp
libwebsockets/mount-origin/: 404.html  index.html  script.js
